# protagonist-routes

./: .gitignore  README.md
deep_protagonist/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_d122_v2.bat  build_devin_20260610.bat  codesearch.ps1  d136_longrun.bat  dp_build.ps1  dp_build_a3.bat  eval_parse.py  fire_audit.py  launch_rand.ps1  launch_variant.ps1  night_select.py  night_select_ff.py  ninja_all.bat  patch_day.py  patch_low_os.py  run_a3_eval.bat  status.ps1  test_fire.cpp  test_weather.cpp
deep_protagonist/configs/: default.toml
deep_protagonist/deprecated/: _probe.ps1  build_d100.bat  build_d122.bat  build_d122_build.bat  build_dep.ps1  build_ew.bat  build_test_fire.bat  build_train.bat  check.ps1  diag_build.ps1  do_build.ps1  eval_both_c.ps1  eval_c3_screen.ps1  eval_c3c_rep.ps1  eval_c3c_screen.ps1  eval_gate.ps1  eval_gate_mask.ps1  eval_multi.ps1  eval_repeat_c.ps1  fair_v4.bat  fair_v5.bat  find_build.ps1  fire_dagger.ps1  gate.ps1  launch_cov.ps1  launch_hx.ps1  launch_hx_b.ps1  launch_r1_cook.ps1  launch_r1_cook_c2.ps1  launch_r1_cook_e.ps1  launch_r1_cook_h.ps1  launch_scar.ps1  launch_trace.ps1  launch_w1.ps1  launch_w1_v2.ps1  launch_w1_v3.ps1  launch_w1_v4.ps1  launch_w1_v5.ps1  launch_w1_v6.ps1  launch_w1_v7.ps1  (+23 more)
deep_protagonist/docs/: BASELINE.md  D-042_PHASE2_DESIGN.md  D102_STATUS.md  HANDOFF.md  PLAN_W2.md  PROGRESS.md  Q&A速查.md  Successor_Features_设计.md  TRAINING_HANDOFF_2026-06-08.md  TROUBLESHOOTING.md  stage3_level1_design.md  决策记录.md  原则.md  参数速查.md  待办_视觉化与打磨.md  最终蓝图.md  术语速查.md  机制闭环审计_账本.md  论文精读_奖励设计.md
deep_protagonist/docs/debugging-playbook/: 00_方法论总览.md  01_kills恒为0_狩猎链路.md  02_多行为预判器_SF-psi.md  03_检查点resume容错.md
deep_protagonist/handoff/: FINAL_2026-06-07.md  P0_baseline.md  PITFALLS.md  START_HERE.md  训练方案_全面涌现.md
deep_protagonist/handoff/scripts/: README.md  analyze_spectrum.py  bc_then_ppo.ps1  build.ps1  cleanup_logs.ps1  eval_frozen.ps1  monitor.ps1  stop_and_save.ps1  train_hunt.ps1  train_repertoire.ps1  view_dp.ps1
deep_protagonist/inbox/: round_22__20260601-053503.md
deep_protagonist/inbox/_processed/: round_10.md  round_11__20260531-041812.md  round_12__20260531-051241.md  round_13__20260531-061952.md  round_14__20260531-083500.md  round_15__20260531-171703.md  round_16__20260531-193559.md  round_17__20260601-001340.md  round_18__20260601-012025.md  round_19__20260601-024322.md  round_1__20260530-171637.md  round_20__20260601-043133.md  round_21__20260601-045812.md  round_2__20260530-182224.md  round_3__20260530-184842.md  round_4__20260530-195835.md  round_5__20260530-214445.md  round_6__20260530-230143.md  round_7__20260530-232000.md  round_8__20260530-233826.md  round_9__20260531-023721.md
deep_protagonist/include/agent/: AgentAction.hpp  CapsuleAgent.hpp  EpisodeManager.hpp  Inventory.hpp  Observation.hpp  Perception.hpp  ProgressTracker.hpp  ProgressTracker.hpp.bak_d136_audit  RewardSystem.hpp  RewardSystem.hpp.bak_d136_audit  RewardSystem.hpp.bak_econ_20260603  Shelter.hpp  SpatialMemory.hpp  TameSystem.hpp  VitalSystem.hpp  Wardrobe.hpp
deep_protagonist/include/env/: Environment.hpp  Environment.hpp.d127bak  Environment.hpp.devinbak_20260610-101314  Environment.hpp.rung2bak  VecEnv.hpp
deep_protagonist/include/policy/: BCTrainer.hpp  BCTrainer.hpp.bak_d115  PPO.hpp  PPO.hpp.devinbak_20260610-101314
deep_protagonist/include/render/: FlyCamera.hpp  WorldRenderer.hpp
deep_protagonist/include/world/: AnimalSystem.hpp  BiomeMap.hpp  BuildingSystem.hpp  CaveSystem.hpp  Daylight.hpp  Decorations.hpp  FarmingSystem.hpp  FarmingSystem.hpp.bak_d136_audit  FireSystem.hpp  FoodSystem.hpp  Heightmap.hpp  Physics.hpp  PlantSystem.hpp  ResourceSystem.hpp  RiverSystem.hpp  WeatherSystem.hpp  World.hpp
deep_protagonist/outbox/: decision_blueprint_world_coherence__20260601-064921.md
deep_protagonist/outbox/_processed/: decision_EOD_handoff__20260531-071218.md  decision_blueprint_nutrition__20260601-031416.md  decision_round_10__20260531-031655.md  decision_round_11__20260531-042211.md  decision_round_12__20260531-051521.md  decision_round_13__20260531-062318.md  decision_round_14__20260531-154350.md  decision_round_15__20260531-172454.md  decision_round_16__20260531-193838.md  decision_round_16b__20260531-215209.md  decision_round_17__20260601-001817.md  decision_round_18__20260601-012220.md  decision_round_19__20260601-024836.md  decision_round_1__20260530-171906.md  decision_round_20__20260601-043657.md  decision_round_21__20260601-050033.md  decision_round_2__20260530-182719.md  decision_round_3__20260530-185010.md  decision_round_4__20260530-200601.md  decision_round_5__20260530-214605.md  decision_round_6__20260530-230405.md  decision_round_7__20260530-232332.md  decision_round_8__20260530-234219.md  decision_round_8_addendum_stage3_scope__20260531-012037.md  decision_round_9__20260531-024111.md  decision_round_9_addendum_fire_world_mechanism__20260531-024902.md
deep_protagonist/scripts/: _build_inner.bat  _configure_inner.bat  _d043_inspect.py  analyze_actions.py  build.ps1  cleanup_logs.ps1  compare_runs.py  configure.ps1  d046_compare.py  d055_progression.py  download_libtorch.ps1  dp_dashboard.py  dp_dashboard.py.bak_viz  fetch_poly_pizza.py  plot_training.py  prune_runs.ps1  summarize_metrics.py  survey2.ps1  survey_d.ps1  sweep_env.py
deep_protagonist/src/: main.cpp  main.cpp.bak_econ_20260603  main_train.cpp  main_train.cpp.bak_d111  main_train.cpp.bak_d115  main_train.cpp.bak_d136_audit  main_train.cpp.bak_hunt  main_train.cpp.bak_round19  main_train.cpp.d127bak  main_train.cpp.devinbak_20260610-101314  main_train.cpp.rung2bak
deep_protagonist/src/agent/: CapsuleAgent.cpp  EpisodeManager.cpp  Inventory.cpp  Observation.cpp  Observation.cpp.bak_a3_20260609_030602  Perception.cpp  ProgressTracker.cpp  RewardSystem.cpp  RewardSystem.cpp.bak_econ_20260603  Shelter.cpp  SpatialMemory.cpp  TameSystem.cpp  VitalSystem.cpp  Wardrobe.cpp
deep_protagonist/src/env/: Environment.cpp  Environment.cpp.bak_d136_audit  Environment.cpp.bak_devin_20260610  (+6 more)
deep_protagonist/tools/: scene_dump.cpp
(+623 files in other folders)
